# Copyright (c) Huawei Technologies Co., Ltd. 2021. All rights reserved.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("../../../base/config.gni")

module_output_path = "${OHOS_PROFILER_TEST_MODULE_OUTPUT_PATH}/device"
config("module_private_config") {
  visibility = [ ":*" ]
  if (current_toolchain != host_toolchain) {
    defines = [
      "HAVE_HILOG",
      "NETWORK_PLUGIN_UNITTEST",
    ]
  }
}

ohos_unittest("networkplugin_ut") {
  module_out_path = module_output_path
  sources = [ "unittest/network_plugin_test.cpp" ]
  deps = [
    "${OHOS_PROFILER_DIR}/device/base:hiprofiler_base",
    "${OHOS_PROFILER_DIR}/device/plugins/network_plugin:networkplugin_source",
    "${OHOS_PROFILER_DIR}/protos/types/plugins/network_data:network_data_cpp",
  ]
  include_dirs = [
    "../include",
    "../../api/include",
    "${OHOS_PROFILER_DIR}/interfaces/kits",
    "${OHOS_PROFILER_DIR}/device/base/include",
  ]
  cflags = [
    "-Wno-inconsistent-missing-override",
    "-Dprivate=public",  #allow test code access private members
    "-Dprotected=public",  #allow test code access private members
  ]

  external_deps = [
    "bounds_checking_function:libsec_shared",
    "c_utils:utils",
    "googletest:gtest",
    "ipc:ipc_core",
    "netmanager_base:net_stats_manager_if",
    "protobuf:protobuf_lite",
  ]
  configs = [ ":module_private_config" ]
  subsystem_name = "${OHOS_PROFILER_SUBSYS_NAME}"
  resource_config_file = "${OHOS_PROFILER_DIR}/device/ohos_test.xml"
}

group("unittest") {
  testonly = true
  deps = [ ":networkplugin_ut" ]
}
