# Copyright (c) Huawei Technologies Co., Ltd. 2024. All rights reserved.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("../../../base/config.gni")

module_output_path = "${OHOS_PROFILER_TEST_MODULE_OUTPUT_PATH}/device"
network_profiler_path = "${OHOS_PROFILER_DIR}/device/plugins/network_profiler"

ohos_unittest("networkprofiler_ut") {
  module_out_path = module_output_path

  sources = [
    "${network_profiler_path}/client/src/network_profiler.cpp",
    "${network_profiler_path}/client/src/network_profiler_socker_client.cpp",
    "${network_profiler_path}/client/src/network_profiler_write.cpp",
    "unittest/network_profiler_test.cpp",
  ]

  deps = [
    "${OHOS_PROFILER_DIR}/device/plugins/api:plugins_sources",
    "${OHOS_PROFILER_DIR}/device/plugins/network_profiler/service:network_profiler_service",
    "${OHOS_PROFILER_DIR}/device/services/plugin_service:hiprofiler_plugin_service",
    "${OHOS_PROFILER_DIR}/device/services/profiler_service:profiler_service",
    "${OHOS_PROFILER_DIR}/device/services/shared_memory:shared_memory_lite",
  ]

  external_deps = [
    "abseil-cpp:absl_sync",
    "bounds_checking_function:libsec_shared",
    "c_utils:utils",
    "googletest:gtest",
    "grpc:grpc",
    "grpc:grpcxx",
    "hilog:libhilog_base",
    "protobuf:protobuf_lite",
  ]

  external_deps += [
    "bounds_checking_function:libsec_shared",
    "init:libbegetutil",
    "openssl:libcrypto_shared",
  ]

  defines = []
  if (current_toolchain != host_toolchain) {
    external_deps += [ "hilog:libhilog_base" ]
  }

  include_dirs = [
    "${network_profiler_path}/client/include",
    "${OHOS_PROFILER_DIR}/device/plugins/api/include",
    "${OHOS_PROFILER_DIR}/device/plugins/api/src",
    "${OHOS_PROFILER_DIR}/interfaces/kits",
    "${OHOS_PROFILER_DIR}/device/base/include",
  ]
  include_dirs += [
    "${OHOS_PROFILER_DIR}/device/plugins/network_profiler/service/include",
    "${OHOS_PROFILER_DIR}/device/services/ipc/include",
    "${OHOS_PROFILER_DIR}/device/services/shared_memory/include",
    "${OHOS_PROFILER_DIR}/device/services/plugin_service/include",
    "${OHOS_PROFILER_DIR}/interfaces/kits",
    "${OHOS_PROFILER_DIR}/device/plugins/api/include",
    "${OHOS_PROFILER_DIR}/device/base/include",
  ]
  cflags = [
    "-Wno-inconsistent-missing-override",
    "-Dprivate=public",  #allow test code access private members
    "-Dprotected=public",  #allow test code access private members
  ]

  subsystem_name = "${OHOS_PROFILER_SUBSYS_NAME}"
}

group("unittest") {
  testonly = true
  deps = [ ":networkprofiler_ut" ]
}
