# Copyright (c) Huawei Technologies Co., Ltd. 2023. All rights reserved.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/test.gni")
import("../../../base/config.gni")

module_output_path = "${OHOS_PROFILER_TEST_MODULE_OUTPUT_PATH}/device"

config("module_private_config") {
  visibility = [ ":*" ]
  defines = [
    "is_ohos=1",
    "CONFIG_NO_HILOG",
    "target_cpu_${target_cpu}",
  ]

  if (current_toolchain != host_toolchain) {
    defines += [ "HAVE_HILOG" ]
  }
}

ohos_unittest("xpowerplugin_ut") {
  module_out_path = module_output_path
  sources = [
    "../src/power_message_queue.cpp",
    "../src/xpower_module.cpp",
    "../src/xpower_plugin.cpp",
    "unittest/xpower_plugin_unittest.cpp",
  ]
  deps = [
    "${OHOS_PROFILER_DIR}/protos/types/plugins/xpower_data:xpower_data_cpp",
    "../../../base:hiprofiler_base",
  ]

  include_dirs = [
    "../include",
    "../../api/include",
    "${OHOS_PROFILER_DIR}/interfaces/kits",
    "${OHOS_PROFILER_DIR}/device/base/include",
  ]

  cflags = [
    "-Wno-inconsistent-missing-override",
    "-Dprivate=public",  #allow test code access private members
    "-Dprotected=public",  #allow test code access private members
    "-DXPOWER_PLUGIN_UNITTEST",  #allow test code access global values
  ]
  external_deps = [
    "bounds_checking_function:libsec_shared",
    "googletest:gtest",
    "hisysevent:libhisysevent",
    "protobuf:protobuf_lite",
  ]
  configs = [ ":module_private_config" ]
  subsystem_name = "${OHOS_PROFILER_SUBSYS_NAME}"
  part_name = "${OHOS_PROFILER_PART_NAME}"
}
group("unittest") {
  testonly = true
  deps = [ ":xpowerplugin_ut" ]
}
