# Copyright (c) Huawei Technologies Co., Ltd. 2025. All rights reserved.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/components/ets_frontend/ets2abc_config.gni")
import("//build/ohos.gni")
import("//build/ohos/ace/ace.gni")
import("//developtools/profiler/hidebug/hidebug.gni")

ohos_shared_library("hidebug_ani") {
  shlib_type = "ani"
  include_dirs = [
    "./include/",
    "$hidebug_path/frameworks/native/include",
    "$hidebug_path/interfaces/native/kits/include",
  ]

  sources = [
    "./src/ani_hidebug.cpp",
    "./src/ani_util.cpp",
  ]

  deps = [
    "$hidebug_path/frameworks/native:hidebug_native"
  ]

  external_deps = [
    "ability_runtime:app_context",
    "bundle_framework:appexecfwk_core_headers",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "hilog:libhilog",
    "hiview:libfaultlogger",
    "init:libbegetutil",
    "ipc:ipc_core",
    "runtime_core:ani",
    "runtime_core:libarkruntime",
    "samgr:samgr_proxy",
  ]

  subsystem_name = "developtools"
  part_name = "hiprofiler"
  output_extension = "so"
}

generate_static_abc("hidebug") {
  base_url = "./ets"
  files = [ "./ets/@ohos.hidebug.ets" ]
  is_boot_abc = "True"
  device_dst_file = "/system/framework/hidebug.abc"
}

ohos_prebuilt_etc("hidebug_etc") {
  source = "$target_out_dir/hidebug.abc"
  module_install_dir = "framework"
  subsystem_name = "developtools"
  part_name = "hiprofiler"
  deps = [ ":hidebug" ]
}
